# api_library

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_total_books_taken_user_total_days_held_books.py
